<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    tools:context="com.ild.couponapp.user.Splash" >

     <LinearLayout 
       android:id="@+id/linearRoot"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       >
    
    <RelativeLayout 
       android:id="@+id/relheading"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"       
       style="@style/green_bg_banner">

         <ImageView
             android:id="@+id/redeemed_banner"
             style="@style/redeemed_banner"
             android:layout_centerHorizontal="true"
             android:background="@drawable/redeemed_banner" />
        
   </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativestarBuckstxt1"
        
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:background="@drawable/dashed_border" >

        <TextView
            android:id="@+id/starBucksTitle"
            style="@style/starBucksTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/starBucksTitle" />

        <TextView
            android:id="@+id/starBuckstxt"
            style="@style/starBuckstxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/starBucksTitle"
            android:text="@string/starBuckstxt" />

        <TextView
            android:id="@+id/expirestxt"
            style="@style/starBucksorg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/starBuckstxt"
            android:text="@string/expires" />

        <TextView
            android:id="@+id/expires"
            style="@style/otherOffer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/expirestxt"
            android:text="@string/otherOffer" />

        <LinearLayout
            android:id="@+id/redeemcalender"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/redeemcalender"
            android:layout_below="@+id/expires"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/redemptionlabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/redemptionlabel" />
            <TextView
                android:id="@+id/redemptioncode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3323232"
                android:background="@drawable/border" />

        </LinearLayout>
    </RelativeLayout>
   <RelativeLayout
        android:id="@+id/relativestarBuckstxt2"
        style="@style/white_bg_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/starBucksTitlea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Attention Merchant:"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="22sp"
       		android:gravity="center"
             />
      <Button
            android:id="@+id/close"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/starBucksTitlea"
            android:text="Click here to verify"
            android:layout_centerHorizontal="true"
            android:background="@color/light_green"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:textAllCaps="false" /> 
 
	</RelativeLayout> 
  </LinearLayout>  
</RelativeLayout> 