<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
            android:id="@+id/pageActivation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:padding="15dp"
            >

            <TextView
                android:id="@+id/coupon_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:gravity="center"
                android:textColor="#333333"
                android:text="@string/location_alert" />
            
             <TextView
                android:id="@+id/coupon_alert_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:layout_below="@+id/coupon_alert"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="#333333"
                android:text="@string/location_alert_sub" />
            
     </RelativeLayout>      
     
       
    <RelativeLayout
            android:id="@+id/relBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pageActivation"
            
             >
       <View
                android:id="@+id/view1"
                style="@style/border_gray"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="1dp" />     
    
    <RelativeLayout
            android:id="@+id/relBottominner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
                     
             >

            <TextView
                android:id="@+id/btnDontAllow"
                android:layout_width="wrap_content"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textColor="#4d6bf6"
                android:background="@null"
                android:padding="10dp"
                
                android:layout_alignParentLeft="true"
                android:layout_height="wrap_content"
                android:text="@string/txt_dont_allow" />
            
            <TextView
                android:id="@+id/btnAllow"
                android:layout_width="wrap_content"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:padding="10dp"
                android:textColor="#4d6bf6"
                android:layout_alignParentRight="true"
                android:background="@null"
                android:layout_height="wrap_content"
                android:text="@string/txt_allow" />
            
     </RelativeLayout> 
     
    </RelativeLayout>

</RelativeLayout>
