<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_green"
     >
  <ImageView 
      android:id="@+id/logo"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:src="@drawable/logo_large"
      android:background="@color/light_green"
      android:layout_marginBottom="50dp"
      android:layout_marginTop="20dp"
      />
  <RelativeLayout
      android:id="@+id/relSub1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/logo"
      android:background="@color/tab_green"
       >
       <TextView 
         android:id="@+id/txtView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"  
         android:text="@string/welcome_txtView1" 
         android:textStyle="bold"
         android:textSize="18sp"
         android:paddingTop="30dp"
         android:textColor="@color/white"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
           />
       <TextView 
          android:id="@+id/txtView2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/welcome_txtView2"
          android:textSize="18sp"
          android:paddingTop="30dp"
          android:textColor="@color/white"
          android:layout_marginLeft="15px"
          android:layout_below="@+id/txtView1"
          android:layout_marginRight="15dp"
           />
       <TextView 
          android:id="@+id/txtView3"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/welcome_txtView3"
          android:textSize="18sp"
          android:paddingTop="30dp"
          android:textColor="@color/white"
          android:layout_marginLeft="15px"
          android:layout_below="@+id/txtView2"
          android:paddingBottom="50dp"
          android:layout_marginRight="15dp"
           />
  </RelativeLayout>
  <LinearLayout 
      android:id="@+id/relSub2"
      android:layout_width="match_parent"
      android:layout_height="match_parent" 
      android:layout_below="@+id/relSub1"
      android:background="@color/tab_green"
      android:gravity="center"
      android:weightSum="1.0"
      >
      <Button 
      android:id="@+id/login"
      android:layout_width="0px"
      android:layout_height="wrap_content"
      android:text="Login"
      android:background="@drawable/button_shape"
      android:layout_marginRight="30dp"
      android:layout_weight="0.5"
      android:layout_marginLeft="20dp"
      />
      <Button 
       android:id="@+id/register"
       android:layout_width="0px"
       android:layout_height="wrap_content"
       android:text="Register"
       android:layout_toRightOf="@+id/login"   
       android:background="@drawable/change_password_button_shape"
       android:textColor="@color/white"
       android:layout_weight="0.5"
       android:layout_marginRight="20dp"
       />
  </LinearLayout>
</RelativeLayout>