<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
<LinearLayout
    android:id="@+id/top_info_group"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
      
   <LinearLayout
    android:id="@+id/fundraiser_details"   
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
       <LinearLayout
           android:id="@+id/chckboxLin"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center_vertical|center_horizontal"
           >
            <ImageView
               android:id="@+id/checkUncheck"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical|center_horizontal"
               android:src="@drawable/unselected_tick"
               android:layout_marginRight="10dp"
               android:layout_marginLeft="5dp"
               />
       </LinearLayout>
    
       <LinearLayout
           android:id="@+id/linder"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:padding="3dp"
           
           android:background="@color/white"
           android:orientation="horizontal" >

           <ImageView
               android:id="@+id/businessLogo"
               style="@style/business_logo1"
               android:layout_gravity="left"
               android:contentDescription="@string/app_company_logo"
               android:scaleType="fitXY"
               android:src="@drawable/merchant" />

           <LinearLayout
               android:id="@+id/app_company_info"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical|center_horizontal"
               android:layout_marginLeft="5dp"
               android:layout_marginRight="30dp"
               android:layout_weight="0.11"
               android:orientation="vertical" >

               <TextView
                   android:id="@+id/txtViewbusinessName"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:singleLine="false"
                   android:text="@string/app_company_name"
                   android:textColor="@color/black"
                   android:textSize="16sp" />

               <TextView
                   android:id="@+id/no_of_coupon"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:singleLine="false"
                   android:text="12 Coupons"
                   android:textSize="12sp" />

               <TextView
                   android:id="@+id/view_coupon_btn"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="5dp"
                   android:textSize="12sp"
                   android:text="@string/view_coupons"
                   android:textColor="#ff6700"
                   android:textStyle="bold" />
           </LinearLayout>

           <!--<ImageView
               android:id="@+id/row"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginRight="5dp"
               android:layout_gravity="center_vertical|center_horizontal"
               android:src="@drawable/next" />-->
       </LinearLayout>
    
       </LinearLayout>
    <View
                android:id="@+id/view1"
                android:layout_width="wrap_content"
                android:layout_height="5dp" />
  </LinearLayout>
</LinearLayout>